--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>proyek</title>
-    <script src="try.js"></script>
+    <script src="main.js"></script>
     <script src="libs.js"></script>
     <script src="bezier.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gl-matrix@3.4.3/gl-matrix-min.min.js"></script>
@@ -12,5 +12,10 @@
 <body style="margin: 0px;">
     <canvas id="mycanvas" style="background-color: white;">
     </canvas>
+    <audio controls autoplay loop id="audio">
+        <source src="ressources/BGM.mp3" type="audio/mp3">
+      Your browser does not support the audio element.
+      </audio> 
+
 </body>
 </html>
