--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 <body style="margin: 0px;">
     <canvas id="mycanvas" style="background-color: white;">
     </canvas>
-    <audio controls autoplay loop id="audio">
+    <audio controls autoplay loop>
         <source src="ressources/BGM.mp3" type="audio/mp3">
-      Your browser does not support the audio element.
       </audio> 
 
 </body>
